reviews issue fix and api doc changes
